--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         <section>
-            <img src="https://lh3.googleusercontent.com/p/AF1QipNFOLK5fz-j0gXCOVnFu5FCNXKgaFZE1BtgIw4i=s1360-w1360-h1020" 
+            <img src="C:\Users\luisi\OneDrive\Escritorio\CursoDesarrolloWeb\ENTREGA2\casa.jpeg" 
                 alt="Nuestro establecimiento" width="100%">
         </section>
 
