--- a/nosotros.html
+++ b/nosotros.html
@@ -24,10 +24,10 @@
         </section>
         <section>
             <div class="imagen-container">
-                <img src="https://lh3.googleusercontent.com/p/AF1QipMIN9gEtgK1hdurXZsWS5nibYpuXKu18Xnd1r-s=s1360-w1360-h1020" alt="Imagen 1">
-                <img src="https://lh3.googleusercontent.com/p/AF1QipMBOzs7v2dcvASG6gPAgahca_1jtGZw2EDbeM3_=s1360-w1360-h1020" alt="Imagen 2">
-                <img src="https://lh3.googleusercontent.com/p/AF1QipMRTzyJ1RBhVKTN0lNRAgUW5GpBYkyIAyempktn=s1360-w1360-h1020" alt="Imagen 3">
-                <img src="https://lh3.googleusercontent.com/p/AF1QipMAUi7EKXzd2qFsQA8zJ3bD1Xo1mJ70NV6CbaSW=s1360-w1360-h1020" alt="Imagen 4">
+                <img src="C:\Users\luisi\OneDrive\Escritorio\CursoDesarrolloWeb\ENTREGA2\imagen1.jpg" alt="Imagen 1">
+                <img src="C:\Users\luisi\OneDrive\Escritorio\CursoDesarrolloWeb\ENTREGA2\imagen2.jpg" alt="Imagen 2">
+                <img src="C:\Users\luisi\OneDrive\Escritorio\CursoDesarrolloWeb\ENTREGA2\imagen3.jpg" alt="Imagen 3">
+                <img src="C:\Users\luisi\OneDrive\Escritorio\CursoDesarrolloWeb\ENTREGA2\imagen4.jpg" alt="Imagen 4">
             </div>
         </section>
     </main>
